--- a/.github/workflows/DeployServer.yml
+++ b/.github/workflows/DeployServer.yml
@@ -2,11 +2,11 @@ name: Deploy Server
 
 on:
   push:
-    branches: 
+    branches:
       - master
     paths:
-      - 'src/*',
-      - '.github/workflows/DeployServer.yml'
+      - "src/*"
+      - ".github/workflows/DeployServer.yml"
 
 jobs:
   deploy:
