--- a/.github/workflows/DeployServer.yml
+++ b/.github/workflows/DeployServer.yml
@@ -15,3 +15,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: test workflow
         run: echo "YAY this workflow is running"
+      - name: Add github username
+        run: git config --global user.name 'kartik18G'
+      - name: Add github email
+        run: git config --global user.email 'gupta.kartik18kg@gmail.com'
+      - name: add heroku remote
+        run: git remote add heroku https://heroku:2a620232-d793-4c42-a39d-1c74102224fa@git.heroku.com/kartik-recipe-api.git
+      - name: push to heroku remote
+        run: git push heroku master
