--- a/.github/workflows/DeployServer.yml
+++ b/.github/workflows/DeployServer.yml
@@ -21,5 +21,7 @@ jobs:
         run: git config --global user.email 'gupta.kartik18kg@gmail.com'
       - name: add heroku remote
         run: git remote add heroku https://heroku:2a620232-d793-4c42-a39d-1c74102224fa@git.heroku.com/kartik-recipe-api.git
+      - name: Fetch repo
+        run: git fetch --unshallow
       - name: push to heroku remote
         run: git push heroku master --force
