--- a/.github/workflows/DeployServer.yml
+++ b/.github/workflows/DeployServer.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Add github email
         run: git config --global user.email 'gupta.kartik18kg@gmail.com'
       - name: add heroku remote
-        run: git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/${{secrets.HEROKU_API_KEY}}.git
+        run: git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/${{secrets.HEROKU_APP_NAME}}.git
       - name: Fetch repo
         run: git fetch --unshallow
       - name: push to heroku remote
