--- a/.github/workflows/DeployServer.yml
+++ b/.github/workflows/DeployServer.yml
@@ -15,3 +15,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: test workflow
         run: echo "YAY this workflow is running"
+       - name: Add github username
+        run: git config --global user.name 'hemanthnaika'
+      - name: Add github email
+        run: git config --global user.email 'hemanthnaika22@gmail.com'
+      - name: add heroku remote
+        run: git remote add heroku https://heroku:5d638c53-7462-4c16-b91a-c1e87b5aac6a@git.heroku.com/hemanth-e-comerce-api.git
+      - name: Fetch repo
+        run: git fetch --unshallow
+       - name: push to heroku remote
+        run: git push heroku master --force
