--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "express": "^4.17.1",
         "express-validator": "^6.13.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.0.14"
+        "mongoose": "^6.0.14",
+        "razorpay": "^2.8.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.16.0",
