--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
     "description": "API server for our ecommerce application",
     "main": "server.js",
     "scripts": {
-        "dev": "nodemon -w src --exec \"babel-node src \"",
+        "dev": "nodemon  --exec ./node_modules/.bin/babel-node src/",
         "build": "babel src --out-dir dist",
         "start": "npm install && npm run build && node dist/index.js"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/kartik18g/ecommerce-backend.git"
+        "url": "git+https://github.com/hemanthnaika/heroku-app.git"
     },
-    "author": "Kartik Gupta",
+    "author": "Hemanth",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/kartik18g/ecommerce-backend/issues"
+        "url": "https://github.com/hemanthnaika/heroku-app/issues"
     },
-    "homepage": "https://github.com/kartik18g/ecommerce-backend#readme",
+    "homepage": "https://github.com/hemanthnaika/heroku-app#readme",
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
